--- a/Vanrise/Code/Vanrise.Web/Client/CSViews/Security/Login.cshtml
+++ b/Vanrise/Code/Vanrise.Web/Client/CSViews/Security/Login.cshtml
@@ -13,7 +13,7 @@
     @Styles.Render("~/Content/Styles")
 
 </head>
-<body ng-controller="mainCtrl">
+<body ng-controller="loginCtrl">
 
     <nav class="navbar navbar-inverse navbar-fixed-top vr-nav-custom">
         <div class="container">
