--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/Login.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/Login.html
@@ -2,7 +2,7 @@
 
     <vr-form name="formLogin">
         <div>
-            <vr-row removeline>
+            <vr-row>
                 <vr-columns colnum="4">
                     <vr-textbox value="email" label="Email"></vr-textbox>
                 </vr-columns>
