--- a/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/ZoneDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/ZoneDashboard.html
@@ -52,7 +52,7 @@
         </vr-row>
         <vr-row>
             <vr-columns colnum="12" simplecol>
-                <vr-datagrid datasource="data"  menuactions="zoneMenuActions">
+                <vr-datagrid datasource="data"  menuactions="zoneMenuActions" on-ready="gridReady">
                     <vr-datagridcolumn headertext="'Zone Name'" field="'EntityName'"></vr-datagridcolumn>
                     <vr-datagridcolumn ng-repeat="measureType in optionsMeasureTypes.datasource" headertext="measureType.name" field="'Values[' + $index + ']'" type="'Number'"></vr-datagridcolumn>
                     <vr-datagridexpandablerow>
