Security Module - Menu Trimming Logic - Fixing Defects
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23602

--- a/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
+++ b/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
@@ -20,8 +20,9 @@
     <nav class="navbar navbar-inverse navbar-fixed-top vr-nav-custom">
         <div class="container">
             <div class="navbar-header">
-
-
+                
+                Welcome {{userDisplayName}} - <a href="#" ng-click="logout()">Logout</a>
+                                                 
             </div>
             <div id="navbar">
 
