--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
@@ -89,10 +89,35 @@
                                 <vr-select datasource="hours" datatextfield="name" datavaluefield="id" label="Peak Hours" selectedvalues="selectedPeakHours" ismultipleselection></vr-select>
                             </vr-columns>
 
-                            {{selectedPeakHours}}
-                            
+                        </vr-row>
+
+                        <vr-row>
+
+                            <vr-columns colnum="3">
+                                <vr-select datasource="hours" datatextfield="name" datavaluefield="id" label="Peak Hours" selectedvalues="selectedPeakHours" ismultipleselection></vr-select>
+                            </vr-columns>
 
                         </vr-row>
+
+
+
+                        <vr-row>
+
+                            <vr-columns colnum="3">
+                                <vr-select datasource="hours" datatextfield="name" datavaluefield="id" label="Peak Hours" selectedvalues="selectedPeakHours" ismultipleselection></vr-select>
+                            </vr-columns>
+
+                        </vr-row>
+
+
+                        <vr-row>
+
+                            <vr-columns colnum="3">
+                                <vr-select datasource="hours" datatextfield="name" datavaluefield="id" label="Peak Hours" selectedvalues="selectedPeakHours" ismultipleselection></vr-select>
+                            </vr-columns>
+
+                        </vr-row>
+
                     </div>
 
 
