git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23620

--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
@@ -87,7 +87,8 @@
                         <vr-row>
 
                             <vr-columns colnum="2">
-                                <vr-select datasource="hours" datatextfield="name" datavaluefield="id" label="Peak Hours" selectedvalues="selectedPeakHours" ismultipleselection></vr-select>
+                                
+                                <vr-select datasource="hours" datatextfield="name" datavaluefield="id" label="Peak Hours" selectedvalues="selectedPeakHours" ismultipleselection></vr-select> 111{{selectedPeakHours}}
                             </vr-columns>
 
 
@@ -105,7 +106,7 @@
 
 
                             <vr-columns colnum="2">
-                                <vr-textbox value="minimumCountofCallstoBeActiveHour" label="Min. Count of Calls in an Active Hour"></vr-textbox>
+                                <vr-textbox value="minCountofCallsinActiveHour" label="Min. Count of Calls in an Active Hour"></vr-textbox>
                             </vr-columns>
 
                         </vr-row>
