--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Reports/BillingReports.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Reports/BillingReports.html
@@ -2,9 +2,9 @@
     <vr-form name="formFilter">
         <div ng-hide="filterSectionCollapsed" vr-loader="isInitializing">
             <vr-row >
-                <vr-columns colnum="2">
+                <vr-columns colnum="3">
                     <vr-select datatextfield="Name" datavaluefield="ReportDefinitionId"
-                               datasource="reportsTypes" selectedvalues="reporttype"></vr-select>
+                               datasource="reportsTypes" selectedvalues="reporttype" onselectionchanged="resetReportParams"></vr-select>
                 </vr-columns>                
             </vr-row>
             <vr-row ng-if="reporttype">
