--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
@@ -42,34 +42,34 @@
                                 </div>
                             </vr-columns>
                             <vr-columns colnum="2">
-                                    <vr-row>
+                                <vr-row>
 
-                                        <vr-columns colnum="12">
+                                    <vr-columns colnum="12">
 
-                                            <vr-select datasource="hours" datatextfield="name" datavaluefield="id" label="Peak Hours" selectedvalues="selectedPeakHours" ismultipleselection></vr-select>
-                                        </vr-columns>
-                                    </vr-row>
-                                    <vr-row>
+                                        <vr-select datasource="hours" datatextfield="name" datavaluefield="id" label="Peak Hours" selectedvalues="selectedPeakHours" ismultipleselection></vr-select>
+                                    </vr-columns>
+                                </vr-row>
+                                <vr-row>
 
-                                        <vr-columns colnum="12">
-                                            <vr-textbox value="gapbetweenconsecutivecalls" label="Gap Between Consecutive Calls"></vr-textbox>
-                                        </vr-columns>
-                                    </vr-row>
-                                    <vr-row>
+                                    <vr-columns colnum="12">
+                                        <vr-textbox value="gapbetweenconsecutivecalls" label="Gap Between Consecutive Calls"></vr-textbox>
+                                    </vr-columns>
+                                </vr-row>
+                                <vr-row>
 
 
-                                        <vr-columns colnum="12">
-                                            <vr-textbox value="maxLowDurationCall" label="Max. Low Duration Call (s) "></vr-textbox>
-                                        </vr-columns>
+                                    <vr-columns colnum="12">
+                                        <vr-textbox value="maxLowDurationCall" label="Max. Low Duration Call (s) "></vr-textbox>
+                                    </vr-columns>
 
-                                    </vr-row>
-                                    <vr-row>
+                                </vr-row>
+                                <vr-row>
 
-                                        <vr-columns colnum="12">
-                                            <vr-textbox value="minCountofCallsinActiveHour" label="Min. Count of Calls in an Active Hour"></vr-textbox>
-                                        </vr-columns>
+                                    <vr-columns colnum="12">
+                                        <vr-textbox value="minCountofCallsinActiveHour" label="Min. Count of Calls in an Active Hour"></vr-textbox>
+                                    </vr-columns>
 
-                                    </vr-row>
+                                </vr-row>
 
                             </vr-columns>
 
@@ -86,30 +86,12 @@
                     </div>
 
                     <div ng-show="ctrl.isLevelsTabShow">
-                        <vr-row>
-
-                            <vr-columns colnum="2">
-                                <vr-select datasource="suspectionLevels" datatextfield="name" datavaluefield="id" label="Suspection Level" colnum="2" selectedvalues="selectedSuspectionLevel"></vr-select>
-                            </vr-columns>
-                            <vr-columns colnum="1">
-                                <div style="background-color:darkgray">
-                                    <vr-button type="Add" data-onclick="AddSuspectionLevel"></vr-button>
-                                </div>
-
-
-                            </vr-columns>
-
-                        </vr-row>
-
                         <div>
-
-
-                        </div>
-
-                        <div>
-
+                            <div style="background-color:black">
+                                <vr-button type="Add" data-onclick="AddSuspectionLevel"></vr-button>
+                            </div>
                             <vr-datagrid datasource="strategyLevels" maxheight="300px">
-                                <vr-datagridcolumn headertext="'Suspection Level'" field="'suspectionLevel.name'" widthfactor="20" columnindex="0"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'Suspection Level'">  <vr-select datasource="viewScope.suspectionLevels" datatextfield="name" datavaluefield="id" ng-init="dataItem.suspectionLevel = (dataItem.suspectionLevel == undefined ? viewScope.suspectionLevels[0] : dataItem.suspectionLevel)" selectedvalues="dataItem.suspectionLevel" isrequired widthfactor="20" columnindex="0"></vr-select>       </vr-datagridcolumn>
                                 <vr-datagridcolumn ng-repeat="filter in strategyFilters" ng-show="filter.isSelected" columnindex="$index + 1" headertext="'Filter: ' + filter.filterId" tag="filter">
                                     <div ng-init="filterIndex = viewScope.strategyFilters.indexOf(colDef.tag)">
                                         <vr-switch value="dataItem.StrategyLevelCriterias[filterIndex].isSelected" style="width:50%"></vr-switch>
