git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23637

--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
@@ -66,7 +66,7 @@
                                 <vr-row>
 
                                     <vr-columns colnum="12">
-                                        <vr-textbox value="minCountofCallsinActiveHour" label="Min. Count of Calls in an Active Hour"></vr-textbox>
+                                        <vr-textbox value="minCountofCallsinActiveHour" label="Min. Call Count in Active Hours"></vr-textbox>
                                     </vr-columns>
 
                                 </vr-row>
