--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Reports/BillingReports.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Reports/BillingReports.html
@@ -7,15 +7,15 @@
                                datasource="reportsTypes" selectedvalues="reporttype" onselectionchanged="resetReportParams"></vr-select>
                 </vr-columns>                
             </vr-row>
-            <vr-row ng-if="reporttype">
-                <vr-columns colnum="3" ng-if="reporttype.ParameterSettings.RequiresCustomerId">
+            <vr-row ng-show="reporttype">
+                <vr-columns colnum="3" ng-show="reporttype.ParameterSettings.RequiresCustomerId">
                     <vr-label>Customer</vr-label>
 
                     <vr-select limitheight="true" hideselectedvaluessection="true" datasource="optionsCustomers"
                                selectedvalues="params.customer" datatextfield="Name" datavaluefield="CarrierAccountID"
                                entityname="Customers"></vr-select>
                 </vr-columns>
-                <vr-columns colnum="3" ng-if="reporttype.ParameterSettings.RequiresSupllierId">
+                <vr-columns colnum="3" ng-show="reporttype.ParameterSettings.RequiresSupllierId">
                     <vr-label>Supplier</vr-label>
                     <vr-select limitheight="true" hideselectedvaluessection="true" datasource="optionsSuppliers"
                                selectedvalues="params.supplier" datatextfield="Name" datavaluefield="CarrierAccountID"
@@ -31,8 +31,8 @@
             </vr-row>
             <vr-row ng-if="reporttype">
                 <vr-columns colnum="3" ng-if="reporttype.ParameterSettings.RequiresMargin">
-                    <vr-label>Margin</vr-label>
-                    <number-filed input-value="params.margin" />%
+                    <vr-label>Margin %</vr-label>
+                    <number-filed input-value="params.margin" />
                 </vr-columns>
                 <vr-columns colnum="3" ng-if="reporttype.ParameterSettings.RequiresGroupByCustomer">
                     <vr-label>Group By Customer</vr-label>
