--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
@@ -28,7 +28,7 @@
 
 
 
-                            <vr-columns colnum="10">
+                            <vr-columns colnum="9">
                                 <div>
 
                                     <vr-datagrid datasource="strategyFilters" maxheight="300px">
@@ -41,35 +41,43 @@
 
                                 </div>
                             </vr-columns>
-                            <vr-columns colnum="2">
-                                <vr-row>
-
-                                    <vr-columns colnum="12">
-
-                                        <vr-select datasource="hours" datatextfield="name" datavaluefield="id" label="Peak Hours" selectedvalues="selectedPeakHours" ismultipleselection></vr-select>
-                                    </vr-columns>
-                                </vr-row>
-                                <vr-row>
-
-                                    <vr-columns colnum="12">
-                                        <vr-textbox value="gapbetweenconsecutivecalls" label="Gap Between Consecutive Calls"></vr-textbox>
-                                    </vr-columns>
-                                </vr-row>
-                                <vr-row>
 
 
-                                    <vr-columns colnum="12">
-                                        <vr-textbox value="maxLowDurationCall" label="Max. Low Duration Call (s) "></vr-textbox>
-                                    </vr-columns>
+                            <vr-columns colnum="3">
+                                <vr-section title="Strategy Parameters">
+                                    <div style="max-height:285px;overflow-y:auto;overflow-x:hidden">
+                                        <vr-row ng-if="strategyFilters[13].isSelected">
 
-                                </vr-row>
-                                <vr-row>
+                                            <vr-columns colnum="11">
 
-                                    <vr-columns colnum="12">
-                                        <vr-textbox value="minCountofCallsinActiveHour" label="Min. Call Count in Active Hours"></vr-textbox>
-                                    </vr-columns>
+                                                <vr-select datasource="hours" datatextfield="name" datavaluefield="id" label="Peak Hours" selectedvalues="selectedPeakHours" ismultipleselection></vr-select>
+                                            </vr-columns>
+                                        </vr-row>
+                                        <vr-row ng-if="strategyFilters[15].isSelected  || strategyFilters[16].isSelected ">
 
-                                </vr-row>
+                                            <vr-columns colnum="11">
+                                                <vr-textbox value="gapbetweenconsecutivecalls" label="Gap Between Consecutive Calls"></vr-textbox>
+                                            </vr-columns>
+                                        </vr-row>
+                                        <vr-row ng-if="strategyFilters[17].isSelected">
+
+
+                                            <vr-columns colnum="11">
+                                                <vr-textbox value="maxLowDurationCall" label="Max. Low Duration Call (s) "></vr-textbox>
+                                            </vr-columns>
+
+                                        </vr-row>
+                                        <vr-row ng-if="strategyFilters[8].isSelected">
+
+                                            <vr-columns colnum="11">
+                                                <vr-textbox value="minCountofCallsinActiveHour" label="Min. Call Count in Active Hours"></vr-textbox>
+                                            </vr-columns>
+
+                                        </vr-row>
+                                    </div>
+
+                                </vr-section>
+
 
                             </vr-columns>
 
@@ -83,36 +91,43 @@
 
 
 
-                    </div>
 
-                    <div ng-show="ctrl.isLevelsTabShow">
-                        <div>
-                            <div style="background-color:black">
-                                <vr-button type="Add" data-onclick="AddSuspectionLevel"></vr-button>
+
+            </vr-row>
+
+
+
+
+            </div>
+
+            <div ng-show="ctrl.isLevelsTabShow">
+                <div>
+                    <div style="background-color:black">
+                        <vr-button type="Add" data-onclick="AddSuspectionLevel"></vr-button>
+                    </div>
+                    <vr-datagrid datasource="strategyLevels" maxheight="300px">
+                        <vr-datagridcolumn headertext="'Suspection Level'" widthfactor="20">  <vr-select datasource="viewScope.suspectionLevels" datatextfield="name" datavaluefield="id" ng-init="dataItem.suspectionLevel = (dataItem.suspectionLevel == undefined ? viewScope.suspectionLevels[0] : dataItem.suspectionLevel)" selectedvalues="dataItem.suspectionLevel" isrequired widthfactor="20" columnindex="0"></vr-select>       </vr-datagridcolumn>
+                        <vr-datagridcolumn ng-repeat="filter in strategyFilters" ng-show="filter.isSelected" columnindex="$index + 1" headertext="'Filter: ' + filter.filterId" tag="filter">
+                            <div ng-init="filterIndex = viewScope.strategyFilters.indexOf(colDef.tag)">
+                                <vr-switch value="dataItem.StrategyLevelCriterias[filterIndex].isSelected" style="width:50%"></vr-switch>
+                                <vr-select style="width:50%" ng-show="dataItem.StrategyLevelCriterias[filterIndex].isSelected" datasource="viewScope.percentages" datatextfield="description" datavaluefield="value" selectedvalues="dataItem.StrategyLevelCriterias[filterIndex].percentage"></vr-select>
                             </div>
-                            <vr-datagrid datasource="strategyLevels" maxheight="300px">
-                                <vr-datagridcolumn headertext="'Suspection Level'">  <vr-select datasource="viewScope.suspectionLevels" datatextfield="name" datavaluefield="id" ng-init="dataItem.suspectionLevel = (dataItem.suspectionLevel == undefined ? viewScope.suspectionLevels[0] : dataItem.suspectionLevel)" selectedvalues="dataItem.suspectionLevel" isrequired widthfactor="20" columnindex="0"></vr-select>       </vr-datagridcolumn>
-                                <vr-datagridcolumn ng-repeat="filter in strategyFilters" ng-show="filter.isSelected" columnindex="$index + 1" headertext="'Filter: ' + filter.filterId" tag="filter">
-                                    <div ng-init="filterIndex = viewScope.strategyFilters.indexOf(colDef.tag)">
-                                        <vr-switch value="dataItem.StrategyLevelCriterias[filterIndex].isSelected" style="width:50%"></vr-switch>
-                                        <vr-select style="width:50%" ng-show="dataItem.StrategyLevelCriterias[filterIndex].isSelected" datasource="viewScope.percentages" datatextfield="description" datavaluefield="value" selectedvalues="dataItem.StrategyLevelCriterias[filterIndex].percentage"></vr-select>
-                                    </div>
 
-                                </vr-datagridcolumn>
-                            </vr-datagrid>
+                        </vr-datagridcolumn>
+                    </vr-datagrid>
 
-                        </div>
+                </div>
 
 
 
 
 
-                    </div>
+            </div>
 
 
 
 
-                </vr-columns>
+            </vr-columns>
 
 
             </vr-row>
