git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23671

--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
@@ -103,10 +103,10 @@
             <div ng-show="ctrl.isLevelsTabShow">
                 <div>
                     <div style="background-color:black">
-                        <vr-button type="Add" data-onclick="AddSuspectionLevel"></vr-button>
+                        <vr-button type="Add" data-onclick="AddSuspicionLevel"></vr-button>
                     </div>
                     <vr-datagrid datasource="strategyLevels" maxheight="300px">
-                        <vr-datagridcolumn headertext="'Suspection Level'" widthfactor="20">  <vr-select datasource="viewScope.suspectionLevels" datatextfield="name" datavaluefield="id" ng-init="dataItem.suspectionLevel = (dataItem.suspectionLevel == undefined ? viewScope.suspectionLevels[0] : dataItem.suspectionLevel)" selectedvalues="dataItem.suspectionLevel" isrequired widthfactor="20" columnindex="0"></vr-select>       </vr-datagridcolumn>
+                        <vr-datagridcolumn headertext="'Suspicion Level'" widthfactor="20">  <vr-select datasource="viewScope.suspicionLevels" datatextfield="name" datavaluefield="id" ng-init="dataItem.suspicionLevel = (dataItem.suspicionLevel == undefined ? viewScope.suspicionLevels[0] : dataItem.suspicionLevel)" selectedvalues="dataItem.suspicionLevel" isrequired widthfactor="20" columnindex="0"></vr-select>       </vr-datagridcolumn>
                         <vr-datagridcolumn ng-repeat="filter in strategyFilters" ng-show="filter.isSelected" columnindex="$index + 1" headertext="'Filter: ' + filter.filterId" tag="filter">
                             <div ng-init="filterIndex = viewScope.strategyFilters.indexOf(colDef.tag)">
                                 <vr-switch value="dataItem.StrategyLevelCriterias[filterIndex].isSelected" style="width:50%"></vr-switch>
