--- a/TOneV2/Code/TOneV2/TOne.CDRProcess/CDRImport/SaveStatisticsToDBProcess.xaml
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess/CDRImport/SaveStatisticsToDBProcess.xaml
@@ -8,6 +8,9 @@
  xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib"
  xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib"
  xmlns:tca="clr-namespace:TOne.CDRProcess.Arguments;assembly=TOne.CDRProcess.Arguments"
+ xmlns:tca1="clr-namespace:TOne.CDRProcess.Activities;assembly=TOne.CDRProcess.Activities"
+ xmlns:tce="clr-namespace:TOne.CDR.Entities;assembly=TOne.CDR.Entities"
+ xmlns:vq="clr-namespace:Vanrise.Queueing;assembly=Vanrise.Queueing"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="Input" Type="InArgument(tca:SaveStatisticsToDBProcessInput)" />
@@ -22,6 +25,7 @@
       <x:String>System.Linq</x:String>
       <x:String>System.Text</x:String>
       <x:String>TOne.CDRProcess.Arguments</x:String>
+      <x:String>Vanrise.Queueing</x:String>
     </sco:Collection>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
@@ -59,30 +63,46 @@
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Sequence sap2010:WorkflowViewState.IdRef="Sequence_1">
+    <Sequence.Variables>
+      <Variable x:TypeArguments="vq:BaseQueue(tce:TrafficStatisticBatch)" Name="TrafficStatQueue">
+        <Variable.Default>
+          <mca:CSharpValue x:TypeArguments="vq:BaseQueue(tce:TrafficStatisticBatch)">TOne.CDR.Business.CDRQueueFactory.GetTrafficStatsQueue(Input.SwitchID)</mca:CSharpValue>
+        </Variable.Default>
+      </Variable>
+    </Sequence.Variables>
     <WriteLine sap2010:WorkflowViewState.IdRef="WriteLine_1">
       <InArgument x:TypeArguments="x:String">
         <mca:CSharpValue x:TypeArguments="x:String">String.Format("Save Statistics To DB Process stared Store CDRS for switch :{0} @ {1}", Input.SwitchID, DateTime.Now)</mca:CSharpValue>
       </InArgument>
     </WriteLine>
+    <tca1:StoreStatisticsToDB PreviousActivityStatus="{x:Null}" Status="{x:Null}">
+      <tca1:StoreStatisticsToDB.InputQueue>
+        <InOutArgument x:TypeArguments="vq:BaseQueue(tce:TrafficStatisticBatch)">
+          <mca:CSharpReference x:TypeArguments="vq:BaseQueue(tce:TrafficStatisticBatch)">TrafficStatQueue</mca:CSharpReference>
+        </InOutArgument>
+      </tca1:StoreStatisticsToDB.InputQueue>
+      <sap2010:WorkflowViewState.IdRef>StoreStatisticsToDB_2</sap2010:WorkflowViewState.IdRef>
+    </tca1:StoreStatisticsToDB>
     <WriteLine sap2010:WorkflowViewState.IdRef="WriteLine_2">
       <InArgument x:TypeArguments="x:String">
         <mca:CSharpValue x:TypeArguments="x:String">String.Format("Save Statistics To DB Process finished Store CDRS for switch :{0} @ {1}", Input.SwitchID, DateTime.Now)</mca:CSharpValue>
       </InArgument>
     </WriteLine>
-    <sads:DebugSymbol.Symbol>d1JDOlxURlNcVE9uZVYyXENvZGVcVE9uZVYyXFRPbmUuQ0RSUHJvY2Vzc1xDRFJJbXBvcnRcU2F2ZVN0YXRpc3RpY3NUb0RCUHJvY2Vzcy54YW1sBT0DSQ4CAQE+BUIRAgEFQwVHEQIBAkAJQLsBAgEGRQlFvQECAQM=</sads:DebugSymbol.Symbol>
+    <sads:DebugSymbol.Symbol>d1JDOlxURlNcVE9uZVYyXENvZGVcVE9uZVYyXFRPbmUuQ0RSUHJvY2Vzc1xDRFJJbXBvcnRcU2F2ZVN0YXRpc3RpY3NUb0RCUHJvY2Vzcy54YW1sCEEDXA4CAQFFC0WuAQIBAkkFTRECAQ1OBVUgAgEJVgVaEQIBBUsJS7sBAgEOUQtRgAECAQpYCVi9AQIBBg==</sads:DebugSymbol.Symbol>
   </Sequence>
   <sap2010:WorkflowViewState.ViewStateManager>
     <sap2010:ViewStateManager>
       <sap2010:ViewStateData Id="WriteLine_1" sap:VirtualizedContainerService.HintSize="211,62" />
+      <sap2010:ViewStateData Id="StoreStatisticsToDB_2" sap:VirtualizedContainerService.HintSize="211,22" />
       <sap2010:ViewStateData Id="WriteLine_2" sap:VirtualizedContainerService.HintSize="211,62" />
-      <sap2010:ViewStateData Id="Sequence_1" sap:VirtualizedContainerService.HintSize="233,288">
+      <sap2010:ViewStateData Id="Sequence_1" sap:VirtualizedContainerService.HintSize="233,350">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </sap2010:ViewStateData>
-      <sap2010:ViewStateData Id="TOne.CDRProcess.SaveStatisticsToDBProcess_1" sap:VirtualizedContainerService.HintSize="273,368" />
+      <sap2010:ViewStateData Id="TOne.CDRProcess.SaveStatisticsToDBProcess_1" sap:VirtualizedContainerService.HintSize="273,430" />
     </sap2010:ViewStateManager>
   </sap2010:WorkflowViewState.ViewStateManager>
 </Activity>
