--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
@@ -115,7 +115,7 @@
 
                         </vr-datagridcolumn>
                     </vr-datagrid>
-
+                    
                 </div>
 
 
@@ -150,7 +150,7 @@
 
 
 
-
+{{strategyLevels}}
 
 
 
